# timeforrust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
.make/: cargo.mk  dist.mk  paths.mk
src/: lib.rs
