[package]
name = "timeforrust"
version = "0.1.0"
description = "A task timer library for Rust"
readme = "README.md"
homepage = "https://github.com/tychosoft/timeforrust"
repository = "https://github.com/tychosoft/timeforrust/"
keywords = ["timer", "thread", "concurrency"]
categories = ["concurrency"]
authors = ["David Sugar <tychosoft@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
